--- a/package.json
+++ b/package.json
@@ -28,12 +28,9 @@
         "url": "https://github.com/zone117x/node-stratum-pool.git"
     },
     "dependencies": {
-        "multi-hashing": "git://github.com/zone117x/node-multi-hashing.git",
+        "multi-hashing": "detailyang/node-multi-hashing.git",
         "bignum": "*",
         "base58-native": "*",
         "async": "*"
-    },
-    "engines": {
-        "node": ">=0.10"
     }
 }
