--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
         "url": "https://github.com/zone117x/node-stratum-pool.git"
     },
     "dependencies": {
-        "multi-hashing": "detailyang/node-multi-hashing.git",
+        "node-multi-hashing": "detailyang/node-multi-hashing.git",
         "bignum": "*",
         "base58-native": "*",
         "async": "*"
